// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchingMovieProcess in action should get an error for page_122 not found 1`] = `
Array [
  Array [
    Object {
      "page": "page_122",
      "type": "MOVIE::FETCHING",
    },
  ],
  Array [
    Object {
      "error": Object {
        "error": "movie with 122 not found.",
      },
      "type": "MOVIE::FETCHING::ERROR",
    },
  ],
]
`;

exports[`fetchingMovieProcess in action should get movie for page_1 1`] = `
Array [
  Array [
    Object {
      "page": "page_1",
      "type": "MOVIE::FETCHING",
    },
  ],
  Array [
    Object {
      "movie": Object {
        "created": "2014-12-10 14:23:31",
        "director": "BB-8",
        "edited": "2015-04-11 09:46:52",
        "episode_id": [Circular],
        "opening_crawl": "this is a test",
        "producer": "Kylo Ren",
        "release_date": "1977-05-25",
        "title": "Hope it Will work",
        "url": "/this/is/url/to/some/movie/",
      },
      "page": "page_1",
      "type": "MOVIE::FETCHING::DONE",
    },
  ],
]
`;

exports[`it creates actions properly MovieFetching 1`] = `
Object {
  "page": "page_1",
  "type": "MOVIE::FETCHING",
}
`;

exports[`it creates actions properly getMovieDone 1`] = `
Object {
  "movie": Object {
    "movie": "test movie ",
  },
  "page": "page_1",
  "type": "MOVIE::FETCHING::DONE",
}
`;

exports[`it creates actions properly getMovieError 1`] = `
Object {
  "error": "this is a test error",
  "type": "MOVIE::FETCHING::ERROR",
}
`;

exports[`it should try to get a movie get a movie 1 1`] = `
Object {
  "created": "2014-12-10 14:23:31",
  "director": "BB-8",
  "edited": "2015-04-11 09:46:52",
  "episode_id": [Circular],
  "opening_crawl": "this is a test",
  "producer": "Kylo Ren",
  "release_date": "1977-05-25",
  "title": "Hope it Will work",
  "url": "/this/is/url/to/some/movie/",
}
`;
